--- a/index.html
+++ b/index.html
@@ -1,4 +1,223 @@
-<div id="platform_background_hyperloop" class="background"></div>
+<!DOCTYPE HTML>
+
+<!-- 
+PROGRAMMER: Frederick Wachter
+DATE CREATED: 2016-04-13
+PURPOSE: Engineering Portfolio of Frederick Wachter
+CONTACT INFO: wachterfreddy@gmail.com
+-->
+
+<head>
+	<title>Engineering Portfolio</title>
+	<link rel="shorcut icon" href="icons/Logo_Small.png"/>
+	<link rel="stylesheet" type="text/css" href="src/styles/style.css"/>
+	
+	<meta name="description" content="Official website for the portfolio of  Frederick Wachter"/>
+	<meta name="keywords" content="Frederick Wachter, Drexel University, Drexel Engineering, Drexel, Mechanical Engineering"/>
+	<meta name="author" content="Frederick Wachter"/>
+	<!--<meta name="google-site-verification" content=""/>-->
+	
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+</head>
+
+<body>
+	
+	<!-- <header></header> -->
+	
+	<main>
+		<div>
+			<!--=============== ======= ===============-->
+			<!--=============== Sidebar ===============-->
+			<!--=============== ======= ===============-->
+			<section id="sidebar">
+				<a href="https://www.facebook.com/freddy.wachter" target="_blank">	
+					<img class="sidebarIcon icon" src="icons/Facebook.png"/>
+				</a>
+				<a href="https://www.youtube.com/channel/UCgnxbWOmcXFhQtGtEecXSpg" target="_blank">
+					<img class="sidebarIcon icon" src="icons/YouTube.png"/>
+				</a>
+				<a href="https://www.linkedin.com/in/frederickwachter" target="_blank">
+					<img class="sidebarIcon icon" src="icons/LinkedIn.png"/>
+				</a>
+				<a href="https://www.github.com/FWachter" target="_blank">
+					<img class="sidebarIcon icon" src="icons/Github.png"/>
+				</a>
+			</section>
+			
+			<!--=============== ===== ===============-->
+			<!--=============== Pages ===============-->
+			<!--=============== ===== ===============-->
+			<section id="intro" class="page">
+				<p id="introText">Frederick Wachter</p>
+			</section>
+			<section id="page1" class="page scroll">
+				<div>
+					<div id="contentPage1" class="center">
+						<div class="spacer"></div>
+						<div class="spacer"></div>
+						<div id="aboutMeDescription" class="black_out">
+							<p class="pageTitle">About Me</p>
+							<p class="pageText" style="text-align:left;">I am a Mechanical Engineer with primary interest in robotics, embedded systems, and software development. The majority of my work and project experience has involved combining software and hardware for developing robotic platforms along with developing software for various applications. I also have experience with full-cycle design, integration, and testing of robotic platforms. I have taken multiple leadership roles in teams ranging from 4 to 100 student and professional members, and have additional experience with project management, product development, sponsorship, and website development.</p>
+							<p class="pageText" style="text-align:left;">I have completed my Bachelor's and Master's degree in Mechanical Engineering from Drexel University in June 2018.</p>
+							<p class="pageText" style="text-align:left;">This website provides an overview of various work experiences, projects, and related activities that I have done since the start of my Bachelor's program.</p> 
+						</div>
+						<div class="spacer" style="height:60px;"></div>
+						<div id="aboutMeDescription" class="black_out">
+							<p class="pageTitle">Platforms</p>
+							<p class="pageText" style="text-align:left;">Below is a list of platforms that I have built and/or worked with since the start of my Bachelor's program along with descriptions and links.
+						</div>
+						<div class="spacer"></div>
+						<div class="platform">
+							<div class="platformImage">
+								<div id="platform_background_swerve" class="background"></div>
+							</div>
+							<p class="blockTitle">Swerve Drive Robot</p>
+							<div class="platformDescription">
+								<p class="largeText">Swerve Drive Robot</p>
+								<p class="smallText">Summer 2017 to Spring 2018</p>
+								<p class="mediumText">Building a highly nimble, high torque, high load bearing platform that is ROS-enabled with integrated autonomy</p>
+							</div>
+							<div class="linksBar">
+								<a href="https://SwerveRoboticSystems.github.io" target="_blank">
+									<span class="icon-desktop"></span>
+								</a>
+								<a href="https://github.com/SwerveRoboticSystems" target="_blank">
+									<span class="icon-github"></span>
+								</a>
+								<a href="https://www.instagram.com/SwerveRoboticSystems/" target="_blank">
+									<span class="icon-instagram"></span>
+								</a>
+								<a href="https://youtu.be/xm55puX2-84" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+								<a href="https://youtu.be/1aeKGklYcik" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+								<a href="https://swerveroboticsystems.github.io/Report/Condensed" target="_blank">
+									<span class="icon-document"></span>
+								</a>
+								<a href="https://goo.gl/eoJwDQ" target="_blank">
+									<span class="icon-document"></span>
+								</a>
+							</div>
+						</div>
+						<div class="platform">
+							<div class="platformImage">
+								<div id="platform_background_soccer" class="background"></div>
+							</div>
+							<p class="blockTitle">Soccer Robot Team</p>
+							<div class="platformDescription">
+								<p class="largeText">Soccer Robot Team</p>
+								<p class="smallText">Fall 2017 to Spring 2018</p>
+								<p class="mediumText">Designed and built a team of three soccer playing robots to compete in the ASME 2018 Student Design comptition</p>
+							</div>
+							<div class="linksBar">
+								<a href="https://drexelasme.github.io/sdc_2018/html/index.html" target="_blank">
+									<span class="icon-desktop"></span>
+								</a>
+								<a href="https://github.com/DrexelASME/sdc_2018/tree/dev" target="_blank">
+									<span class="icon-github"></span>
+								</a>
+								<a href="https://www.instagram.com/p/BhmZq6ijH-M/?taken-by=freddywa" target="_blank">
+									<span class="icon-video"></span>
+								</a>
+								<a href="https://goo.gl/8sp55F" target="_blank">
+									<span class="icon-document"></span>
+								</a>
+								<a href="https://goo.gl/cCEvn5" target="_blank">
+									<span class="icon-newspaper"></span>
+								</a>
+								<a href="https://goo.gl/kx8E9a" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+							</div>
+						</div>
+						<div class="platform">
+							<div class="platformImage">
+								<div id="platform_background_micromouse" class="background"></div>
+							</div>
+							<p class="blockTitle">Micromouse</p>
+							<div class="platformDescription">
+								<p class="largeText">Micromouse</p>
+								<p class="smallText">Spring 2017 to Spring 2018</p>
+								<p class="mediumText">Performing development of maze solving algorithm, system integration, manufacturing, and programming of the robot. Working with three other team members.</p>
+							</div>
+							<div class="linksBar">
+								<a href="https://www.youtube.com/watch?v=W23ovwPaJdQ" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+								<a href="https://github.com/FWachter/Micromouse" target="_blank">
+									<span class="icon-github"></span>
+								</a>
+							</div>
+						</div>
+						<div class="platform">
+							<div class="platformImage">
+								<div id="platform_background_auto_flight" class="background"></div>
+							</div>
+							<p class="blockTitle">Autonomous Flight</p>
+							<div class="platformDescription">
+								<p class="largeText">Aerial Platform</p>
+								<p class="smallText">Spring 2017 to Summer 2017</p>
+								<p class="mediumText">Developed helical flight patterns for an autonomous UAV using the PX4 flight controller through the ROS framework.</p>
+							</div>
+							<div class="linksBar">
+							</div>
+						</div>
+						<div class="platform">
+							<div class="platformImage">
+								<div id="platform_background_auto_boat" class="background"></div>
+							</div>
+							<p class="blockTitle">Autonomous Boat</p>
+							<div class="platformDescription">
+								<p class="largeText">Maritime Platform</p>
+								<p class="smallText">Spring 2017 to Summer 2017</p>
+								<p class="mediumText">Performed sensor data aquisition and integration, designed and integrated sensors packages and components, and converted autonomy code over to the ROS framework.</p>
+							</div>
+							<div class="linksBar">
+							</div>
+						</div>
+						<div class="platform">
+							<div class="platformImage">
+								<div id="platform_background_yumi" class="background"></div>
+							</div>
+							<p class="blockTitle">ABB YuMi</p>
+							<div class="platformDescription">
+								<p class="largeText">ABB YuMi</p>
+								<p class="smallText">March 2016 to September 2016</p>
+								<p class="mediumText">Interfaces the YuMi ABB industrial robot with ROS and MoveIt! library and presented work to the President of ABB Switzerland.</p>
+							</div>
+							<div class="linksBar">
+								<a href="https://github.com/ethz-asl/yumi" target="_blank">
+									<span class="icon-github"></span>
+								</a>
+								<a href="https://www.youtube.com/watch?v=NM55aS-hmPk" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+								<a href="https://www.youtube.com/watch?v=iwm0iYtpO94" target="_blank">
+									<span class="icon-youtube"></span>
+								</a>
+								<a href="https://www.facebook.com/eth/posts/1262436083767741%3A0" target="_blank">
+									<span class="icon-newspaper"></span>
+								</a>
+							</div>
+						</div>
+						<div class="platform">
+							<div class="platformImage">
+								<div id="platform_background_dragon" class="background"></div>
+							</div>
+							<p class="blockTitle">Versatile Ground Robot</p>
+							<div class="platformDescription">
+								<p class="largeText">Versatile Ground Robot</p>
+								<p class="smallText">Fall 2016 to Spring 2017</p>
+								<p class="mediumText">Performed the chassis design, build, and integration with four other subsystem, designed and built the electronics, and programmed the robot.</p>
+							</div>
+							<div class="linksBar">
+							</div>
+						</div>
+						<div class="platform">
+							<div class="platformImage">
+								<div id="platform_background_hyperloop" class="background"></div>
 							</div>
 							<p class="blockTitle">Drexel Hyperloop</p>
 							<div class="platformDescription">
@@ -654,3 +873,5 @@
 	<script type="text/javascript" src="src/scripts/script.js"></script>
 	
 </body>
+
+3
