--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML>
 
 <!-- 
-PROGRAMMER: Frederick Wachter
-DATE CREATED: 2016-04-13
-PURPOSE: Engineering Portfolio of Frederick Wachter
-CONTACT INFO: wachterfreddy@gmail.com
+PROGRAMMER: Alex Lyakishev
+DATE CREATED: 2024-10-08
+PURPOSE: Engineering Portfolio of Alex Lyakishev
 -->
 
 <head>
@@ -12,9 +11,9 @@ CONTACT INFO: wachterfreddy@gmail.com
 	<link rel="shorcut icon" href="icons/Logo_Small.png"/>
 	<link rel="stylesheet" type="text/css" href="src/styles/style.css"/>
 	
-	<meta name="description" content="Official website for the portfolio of  Frederick Wachter"/>
-	<meta name="keywords" content="Frederick Wachter, Drexel University, Drexel Engineering, Drexel, Mechanical Engineering"/>
-	<meta name="author" content="Frederick Wachter"/>
+	<meta name="description" content="Official website for the portfolio of Alex Lyakishev"/>
+	<meta name="keywords" content="Alex Lyakishev, Alexander Lyakishev, McGill University, McGill Engineering, McGill, Mechanical Engineering"/>
+	<meta name="author" content="Alex Lyakishev"/>
 	<!--<meta name="google-site-verification" content=""/>-->
 	
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
