--- a/index.html
+++ b/index.html
@@ -29,16 +29,10 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 			<!--=============== Sidebar ===============-->
 			<!--=============== ======= ===============-->
 			<section id="sidebar">
-				<a href="https://www.facebook.com/freddy.wachter" target="_blank">	
-					<img class="sidebarIcon icon" src="icons/Facebook.png"/>
-				</a>
-				<a href="https://www.youtube.com/channel/UCgnxbWOmcXFhQtGtEecXSpg" target="_blank">
-					<img class="sidebarIcon icon" src="icons/YouTube.png"/>
-				</a>
-				<a href="https://www.linkedin.com/in/frederickwachter" target="_blank">
+				<a href="https://www.linkedin.com/in/alexanderlyakishev" target="_blank">
 					<img class="sidebarIcon icon" src="icons/LinkedIn.png"/>
 				</a>
-				<a href="https://www.github.com/FWachter" target="_blank">
+				<a href="https://www.github.com/AlexLyakishev" target="_blank">
 					<img class="sidebarIcon icon" src="icons/Github.png"/>
 				</a>
 			</section>
@@ -47,7 +41,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 			<!--=============== Pages ===============-->
 			<!--=============== ===== ===============-->
 			<section id="intro" class="page">
-				<p id="introText">Frederick Wachter</p>
+				<p id="introText">Alex Lyakishev</p>
 			</section>
 			<section id="page1" class="page scroll">
 				<div>
@@ -56,14 +50,14 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						<div class="spacer"></div>
 						<div id="aboutMeDescription" class="black_out">
 							<p class="pageTitle">About Me</p>
-							<p class="pageText" style="text-align:left;">I am a Mechanical Engineer with primary interest in robotics, embedded systems, and software development. The majority of my work and project experience has involved combining software and hardware for developing robotic platforms along with developing software for various applications. I also have experience with full-cycle design, integration, and testing of robotic platforms. I have taken multiple leadership roles in teams ranging from 4 to 100 student and professional members, and have additional experience with project management, product development, sponsorship, and website development.</p>
-							<p class="pageText" style="text-align:left;">I have completed my Bachelor's and Master's degree in Mechanical Engineering from Drexel University in June 2018.</p>
-							<p class="pageText" style="text-align:left;">This website provides an overview of various work experiences, projects, and related activities that I have done since the start of my Bachelor's program.</p> 
+							<p class="pageText" style="text-align:left;">I am a 3rd year Mechanical Engineering with primary interest in additive manufacturing, robotic systems, and novel design methodologies.</p>
+							<p class="pageText" style="text-align:left;">I am currently working on my Mechanical Engeering degree from McGill University.</p>
+							<p class="pageText" style="text-align:left;">This website provides an overview of various work experiences, projects, and related activities that I have done.</p> 
 						</div>
 						<div class="spacer" style="height:60px;"></div>
 						<div id="aboutMeDescription" class="black_out">
-							<p class="pageTitle">Platforms</p>
-							<p class="pageText" style="text-align:left;">Below is a list of platforms that I have built and/or worked with since the start of my Bachelor's program along with descriptions and links.
+							<p class="pageTitle">Projects</p>
+							<p class="pageText" style="text-align:left;">Below is a list of projects that I have worked on along with descriptions and relevant links.
 						</div>
 						<div class="spacer"></div>
 						<div class="platform">
@@ -841,7 +835,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						    <input id="userEmail" placeholder="Email" type="email" name="_replyto" required>
 						    <textarea id="userMessage" placeholder="Message" rows="4" width="100"></textarea>
 						    <!-- Configureations -->
-						    <input type="hidden" name="_cc" value="wachterfreddy@gmail.com">
+						    <input type="hidden" name="_cc" value="alexander.lyakishev@outlook.com">
 						    <input type="hidden" name="_subject" value="Personal Website Contact Request">
 							<!-- Submission -->
 						    <input id="formSubmit" class="icon" type="submit" value="Send">
@@ -864,7 +858,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 				<div class="footerButton icon footerIcon notActive"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: July 28th, 2018</p>
+				<p id="lastModified">Last Updated: October 8th, 2024</p>
 			</section>
 		<div>
 	</main>
