--- a/index.html
+++ b/index.html
@@ -64,33 +64,15 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformImage">
 								<div id="platform_background_swerve" class="background"></div>
 							</div>
-							<p class="blockTitle">Swerve Drive Robot</p>
+							<p class="blockTitle">McGill Drone and Vertical Flight Society</p>
 							<div class="platformDescription">
-								<p class="largeText">Swerve Drive Robot</p>
-								<p class="smallText">Summer 2017 to Spring 2018</p>
-								<p class="mediumText">Building a highly nimble, high torque, high load bearing platform that is ROS-enabled with integrated autonomy</p>
+								<p class="largeText">MDVFS Captain</p>
+								<p class="smallText">Fall 2022 to Present</p>
+								<p class="mediumText">Captain of the drone design team at McGill, creating an autonomous UAV to compete against other Canadian Universities.</p>
 							</div>
 							<div class="linksBar">
-								<a href="https://SwerveRoboticSystems.github.io" target="_blank">
+								<a href="https://mcgilldronesandverticalflightsociety.com" target="_blank">
 									<span class="icon-desktop"></span>
-								</a>
-								<a href="https://github.com/SwerveRoboticSystems" target="_blank">
-									<span class="icon-github"></span>
-								</a>
-								<a href="https://www.instagram.com/SwerveRoboticSystems/" target="_blank">
-									<span class="icon-instagram"></span>
-								</a>
-								<a href="https://youtu.be/xm55puX2-84" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://youtu.be/1aeKGklYcik" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://swerveroboticsystems.github.io/Report/Condensed" target="_blank">
-									<span class="icon-document"></span>
-								</a>
-								<a href="https://goo.gl/eoJwDQ" target="_blank">
-									<span class="icon-document"></span>
 								</a>
 							</div>
 						</div>
