--- a/index.html
+++ b/index.html
@@ -80,30 +80,15 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformImage">
 								<div id="platform_background_soccer" class="background"></div>
 							</div>
-							<p class="blockTitle">Soccer Robot Team</p>
+							<p class="blockTitle">Custom Snowboard</p>
 							<div class="platformDescription">
-								<p class="largeText">Soccer Robot Team</p>
-								<p class="smallText">Fall 2017 to Spring 2018</p>
-								<p class="mediumText">Designed and built a team of three soccer playing robots to compete in the ASME 2018 Student Design comptition</p>
+								<p class="largeText">Creating a custom snowboard</p>
+								<p class="smallText">Fall 2024 to Present</p>
+								<p class="mediumText">In process of designing and manufacturing a composite snowboard featuring a wood+aramid honeycomb core and carbon fiber reinforcements</p>
 							</div>
 							<div class="linksBar">
-								<a href="https://drexelasme.github.io/sdc_2018/html/index.html" target="_blank">
+								<a href="" target="_blank">
 									<span class="icon-desktop"></span>
-								</a>
-								<a href="https://github.com/DrexelASME/sdc_2018/tree/dev" target="_blank">
-									<span class="icon-github"></span>
-								</a>
-								<a href="https://www.instagram.com/p/BhmZq6ijH-M/?taken-by=freddywa" target="_blank">
-									<span class="icon-video"></span>
-								</a>
-								<a href="https://goo.gl/8sp55F" target="_blank">
-									<span class="icon-document"></span>
-								</a>
-								<a href="https://goo.gl/cCEvn5" target="_blank">
-									<span class="icon-newspaper"></span>
-								</a>
-								<a href="https://goo.gl/kx8E9a" target="_blank">
-									<span class="icon-youtube"></span>
 								</a>
 							</div>
 						</div>
@@ -111,18 +96,15 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformImage">
 								<div id="platform_background_micromouse" class="background"></div>
 							</div>
-							<p class="blockTitle">Micromouse</p>
+							<p class="blockTitle">Baja Subteam Lead</p>
 							<div class="platformDescription">
-								<p class="largeText">Micromouse</p>
-								<p class="smallText">Spring 2017 to Spring 2018</p>
-								<p class="mediumText">Performing development of maze solving algorithm, system integration, manufacturing, and programming of the robot. Working with three other team members.</p>
+								<p class="largeText">Baja Pedals Subteam Lead</p>
+								<p class="smallText">Fall 2022 to Spring 2023</p>
+								<p class="mediumText">Developed first metal 3D printed parts used on car and utilized a systems engineering approach</p>
 							</div>
 							<div class="linksBar">
-								<a href="https://www.youtube.com/watch?v=W23ovwPaJdQ" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://github.com/FWachter/Micromouse" target="_blank">
-									<span class="icon-github"></span>
+								<a href="https://baja.mcgilleus.ca" target="_blank">
+									<span class="icon-desktop"></span>
 								</a>
 							</div>
 						</div>
@@ -130,13 +112,16 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformImage">
 								<div id="platform_background_auto_flight" class="background"></div>
 							</div>
-							<p class="blockTitle">Autonomous Flight</p>
+							<p class="blockTitle">InSpira</p>
 							<div class="platformDescription">
-								<p class="largeText">Aerial Platform</p>
-								<p class="smallText">Spring 2017 to Summer 2017</p>
-								<p class="mediumText">Developed helical flight patterns for an autonomous UAV using the PX4 flight controller through the ROS framework.</p>
+								<p class="largeText">INSPIRA PBR NASAxCSA Deep Space Food Challenge Competitor</p>
+								<p class="smallText">Fall 2022 to Spring 2023</p>
+								<p class="mediumText">•	Used SolidWorks to create an optimal sensor layout and a 3D printed custom electronics enclosure for a maximally autonomous algae food production system for use on long-duration space missions</p>
 							</div>
 							<div class="linksBar">
+								<a href="https://reporter.mcgill.ca/mcgill-teams-put-prototypes-through-their-paces-in-deep-space-food-challenge/" target="_blank">
+									<span class="icon-newspaper"></span>
+								</a>
 							</div>
 						</div>
 						<div class="platform">
