--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformImage">
 								<div id="platform_background_swerve" class="background"></div>
 							</div>
-							<p class="blockTitle">McGill Drone and Vertical Flight Society</p>
+							<p class="blockTitle">MDVFS Captain</p>
 							<div class="platformDescription">
-								<p class="largeText">MDVFS Captain</p>
+								<p class="largeText">McGill Drone and Vertical Flight Society</p>
 								<p class="smallText">Fall 2022 to Present</p>
-								<p class="mediumText">Captain of the drone design team at McGill, creating an autonomous UAV to compete against other Canadian Universities.</p>
+								<p class="mediumText">Captain of the drone design team at McGill, creating an autonomous UAV to compete against other Canadian Universities with over 150 members.</p>
 							</div>
 							<div class="linksBar">
 								<a href="https://mcgilldronesandverticalflightsociety.com" target="_blank">
@@ -82,7 +82,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							</div>
 							<p class="blockTitle">Custom Snowboard</p>
 							<div class="platformDescription">
-								<p class="largeText">Creating a custom snowboard</p>
+								<p class="largeText">Custom Snowboard</p>
 								<p class="smallText">Fall 2024 to Present</p>
 								<p class="mediumText">In process of designing and manufacturing a composite snowboard featuring a wood+aramid honeycomb core and carbon fiber reinforcements</p>
 							</div>
