--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformImage">
 								<div id="platform_background_auto_flight" class="background"></div>
 							</div>
-							<p class="blockTitle">InSpira</p>
+							<p class="blockTitle">InSpira Bioreactor</p>
 							<div class="platformDescription">
 								<p class="largeText">INSPIRA PBR NASAxCSA Deep Space Food Challenge Competitor</p>
 								<p class="smallText">Fall 2022 to Spring 2023</p>
